# clams-kitchen

./: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_job.py  runlog_sum.py
clams_kitchen/: dockerops.py  run_job.py  runlog_sum.py
clams_kitchen/drawer/: media_availability.py  mmif_adjunct.py
clams_kitchen/drawer/bash_aux/: ci_url.sh
drawer/: media_availability.py  mmif_adjunct.py
sample_config/: jobconf_visaid_swt74.json  jobconf_visaid_swt74_mp.json  jobconf_visaid_swt77_mp.json  jobconf_ww13.json
sample_recipes/: jobconf_visaid_swt77_no-gpu.json  jobconf_visaid_swt83_lg.json  jobconf_visaid_swt83_ty_no-gpu.json  jobconf_visaid_swt8_lg.json  jobconf_visaid_swt8_lg_simple.json  jobconf_visaid_swt8_ty_no-gpu.json  jobconf_ww13.json  jobconf_ww15.json
src/clams_kitchen/: __init__.py  run_job.py
src/clams_kitchen/drawer/: ci_url.py  media_availability.py  mmif_adjunct.py
